<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ll_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/btn_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_show_toast"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        >

        <Button
            android:id="@+id/btn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_show_text"
            />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/message_login_invalid"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_snackbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_show_snackbar"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/btn_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_show_dialog"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/btn_custom_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_show_custom_dialog"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/btn_bottom_sheet_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_show_bottom_sheet_dialog"
        android:layout_marginBottom="20dp"
        />

</LinearLayout>